--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 #slogan{
-	margin-left: 20%;
+	margin-left: 10%;
 }
 
 #description {
@@ -16,4 +16,9 @@
 	margin: 180px;
 	font-size: 20px;
 	left:20px;
+}
+
+#logo{
+	width: 300px;
+	height: 40px;
 }
